# lgxpkf

./: .dockerignore  .env.example  .gitignore  AGENT.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: ghcr.yml
db/migrations/: 0001_init.sql  0002_follows.sql  0003_account_note.sql  0004_version_unique.sql
docs/: README.md
docs/api/: README.md  account.md  associations.md  auth.md  errors.md  feed.md  follows.md  health.md  http.md  notes.md  related.md  users.md  versions.md
docs/architecture/: README.md  component-map.md  concurrency.md  data-flow.md  system-overview.md
docs/auth/: README.md  google-oauth.md  redirects.md  security.md  sessions.md
docs/development/: README.md  code-style.md  git.md  performance.md  testing.md
docs/domain/: README.md  association.md  follow.md  identifiers.md  note.md  user.md
docs/http/: README.md  request-parsing.md  response.md  routing.md  server.md
docs/operations/: README.md  docker-compose.md  logging.md  metrics.md  registry.md  runbooks.md
docs/overview/: README.md  constraints.md  glossary.md  vision.md
docs/policies/: README.md  community-guidelines.md  guideline.md  privacy.md  terms.md
docs/requirements/: README.md  compliance.md  functional.md  japan-privacy.md  non-functional.md
docs/security/: README.md  data-protection.md  threat-model.md
docs/storage/: README.md  indexing.md  migrations.md  postgres.md  schema.md
scripts/: build-web.js
src/: config.rs  errors.rs  main.rs  related.rs  state.rs
src/api/: auth.rs  (+10 more)
(+83 files in other folders)
