[package]
name = "lgxpkf"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
rand = "0.8"
base64 = "0.21"
data-encoding = "2.5"
url = "2.5"
thiserror = "1.0"
jsonwebtoken = "9.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
once_cell = "1.19"

[dependencies.tokio-postgres]
version = "0.7"
features = ["with-uuid-1", "with-time-0_3"]

[dependencies.deadpool-postgres]
version = "0.12"
features = ["serde", "rt_tokio_1"]

[profile.release]
strip = true
lto = true
codegen-units = 1
